[gd_scene load_steps=7 format=3 uid="uid://c4x6bs0jero3r"]

[ext_resource type="StyleBox" uid="uid://ckdd1s5h3hoey" path="res://panel_ui.tres" id="1_vtv7q"]
[ext_resource type="Script" uid="uid://c3t0iky0yxudw" path="res://fileselectpopup.gd" id="2_s3kyd"]
[ext_resource type="Script" uid="uid://htach7s73ev1" path="res://files_list.gd" id="3_tk2yd"]
[ext_resource type="Theme" uid="uid://ou2vxvpvh4vc" path="res://ui_theme.tres" id="4_wooou"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_tk2yd"]
size = Vector2(284, 149)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tk2yd"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 20.0
bg_color = Color(0.10748, 0.10748, 0.10748, 0.909804)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
anti_aliasing = false

[node name="PanelContainer" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 10.88
theme_override_styles/panel = ExtResource("1_vtv7q")
script = ExtResource("2_s3kyd")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_stretch_ratio = 5.7
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 21
text = "Saved Code"
horizontal_alignment = 1

[node name="Directory" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 12.14
script = ExtResource("3_tk2yd")
placeholder_texture = SubResource("PlaceholderTexture2D_tk2yd")

[node name="ItemList" type="ItemList" parent="VBoxContainer/Directory"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/outline_size = 0
theme_override_constants/v_separation = 26
theme_override_constants/icon_margin = 0
theme_override_constants/h_separation = 33
theme_override_font_sizes/font_size = 21
max_columns = 6
icon_mode = 0

[node name="PanelContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.08
theme_override_constants/separation = 17

[node name="TextArea" type="LineEdit" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 19
theme_override_styles/normal = SubResource("StyleBoxFlat_tk2yd")
placeholder_text = "Filename..."

[node name="Button" type="Button" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1
theme = ExtResource("4_wooou")
theme_override_font_sizes/font_size = 29
text = "Save"

[connection signal="item_selected" from="VBoxContainer/Directory/ItemList" to="VBoxContainer/Directory" method="_on_item_list_item_selected"]
[connection signal="text_changed" from="VBoxContainer/PanelContainer/TextArea" to="." method="_on_text_area_text_changed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/Button" to="." method="_action_button_pressed"]
